--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body{
 }
 
 
+
 /*header part*/
 .title{
     width:200px;
@@ -15,19 +16,21 @@ body{
 
 
 
+
 /*navigation part*/
 .n{
     color:white ;
 }
-.mennu{
+/*.mennu{
     margin-left: 300px;
-}
+}*/
 .cart{
     font-size: 20px;
     color: white;
     /*transform: translate(890px, -3px);*/
     
 }
+
 
 
 
@@ -41,6 +44,8 @@ body{
     margin-top: -1px;
     transform: translate(0px, -19px);
 }
+
+
 
 
 
@@ -63,10 +68,12 @@ body{
         
     }
     .log{
-        transform: translate(-20px, 9px);
+        margin-top: 8px;
+        margin-left: -20px;
     }
     .sign{
-        transform: translate(-20px, 9px);
+        margin-top: 8px;
+        
     }
 }
 
@@ -89,6 +96,9 @@ body{
 @media only screen and (min-width: 1200px) {
     
 }
+
+
+
 
 
 
@@ -117,12 +127,9 @@ body{
     .mennu{
         margin-left: 0px;
     }
-    .formm{
-        margin-left: -120px;
-        width: 100px;
-     }
+    
     .dhakamed{
-        margin-left: -110px;
+        margin-left: 5px;
      }
 }
 
@@ -151,7 +158,15 @@ body{
 
 
 
+
+
+
+
+
 /*media query top sale part*/
+@media only screen and (max-width: 600px) {
+    
+}
 @media only screen and (min-width: 600px) {
     .medicine_1{
         margin-left: 100px;
@@ -206,6 +221,8 @@ body{
 
 
 
+
+
 /*media query middle banner part*/
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -234,6 +251,8 @@ body{
         margin-left: 350px;
     }
 }
+
+
 
 
 
@@ -290,11 +309,13 @@ body{
 
 
 
+
+
 /*media qury footer part*/
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .copyright{
-        margin-right: 200px;
+        transform: translate(80px, -30px);
         
     }
 }
@@ -302,7 +323,7 @@ body{
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
     .copyright{
-        margin-right: 400px;
+        transform: translate(80px, -30px);
     }
 }
 
@@ -323,6 +344,6 @@ body{
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
     .copyright{
-        margin-right: 600px;
+        margin-left: 350px;
     }
 }
