--- a/css/admin_panel1_style.css
+++ b/css/admin_panel1_style.css
@@ -189,7 +189,7 @@ a.article:hover {
     
 }
 .table_height{
-    height: 650px;
+    height: 550px;
 }
 
 
@@ -339,18 +339,115 @@ a.article:hover {
 
 
 
-/*table media query*/
+/*table recent purchase media query*/
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .table_height{
-        width: 100px;
-        margin-left: -30px;
+        
+        margin-left: -20px;
     }
     .table_width{
         margin-right: 100px;
         font-size: 10px;
         
     }
+    .view_purchase_button{
+        margin-left: 100px;
+        margin-top: 10px;
+    }
+    
+}
+@media only screen and (min-width: 414px) {
+    
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .table_height{
+        
+        margin-left: -15px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+/*2nd chart  projection media query*/
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .projection_chart{
+        margin-left: -20px;
+        height:400px;
+        margin-top: 20px;
+    }
+    
+}
+@media only screen and (min-width: 414px) {
+    
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .projection_chart{
+       
+        margin-top: 20px;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .projection_chart{
+        
+        margin-top: 20px;
+        
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .projection_chart{
+        margin-left: 60px;
+        margin-top: 0px;
+        
+    }
+}
+
+
+
+
+
+
+
+/*to do list & recent user media query*/
+
+/*to do list query*/
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    
     
 }
 
@@ -371,5 +468,170 @@ a.article:hover {
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+    .to_do_list{
+        margin-left: 15px;
+    }
+}
+
+
+
+
+
+
+
+
+/*recent user query*/
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .recent_user{
+        
+        margin-top: 20px;
+    }
+    .user_para{
+        margin-left: 20px;
+    }
     
 }
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .recent_user{
+        margin-top: 20px;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .recent_user{
+        margin-top:0px;
+        margin-left: 40px;
+    }
+}
+
+
+
+
+
+
+
+/*my task query & website visits & system load section*/
+
+/*my task query*/
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    
+    
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .my_task{
+        margin-left: 15px;
+    }
+    
+}
+
+
+
+
+
+
+/*website visits query*/
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .website_visit{
+        margin-top: 20px;
+    }
+    
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .website_visit{
+        margin-top: 20px;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .website_visit{
+        margin-left: 20px;
+        margin-top:0px;
+    }
+}
+
+
+
+
+
+
+
+/*system load query*/
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .system_load{
+        margin-top: 20px;
+    }
+    
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .system_load{
+        margin-top: 20px;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .system_load{
+        margin-left: 20px;
+        margin-top:0px;
+    }
+}
+
